# PTN-Engine

./: .codedocs  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README  README.md  ReleaseNotes.md  ReleaseNotes_v1_0_0.md  ReleaseNotes_v1_1_0.md  ReleaseNotes_v1_1_1.md  ReleaseNotes_v2_0_0.md  travis.sh
.github/: FUNDING.yml
.github/workflows/: cmake.yml  documentation.yml  static.yaml  static.yml
BlackBoxTests/: CMakeLists.txt
BlackBoxTests/Mocks/: Dispatcher.cpp  Dispatcher.h  IDispatcherPetriNet.h  RoundRobinPetriNet.cpp
BlackBoxTests/Tests/: TestPetriNet.cpp
Doc/Doxygen/: .gitignore  Codedocs.doxy  FullDocumentation.doxy  PTN_Engine.doxy
Doc/Specification/: Specification.md
Doc/User Guide/: UserGuide.md
Examples/: CMakeLists.txt
Examples/Elevator/: CMakeLists.txt  main.cpp
Examples/Elevator/Controller/: ElevatorController.cpp  ElevatorController.h  ElevatorPetriNet.cpp  ElevatorPetriNet.h  IElevatorPetriNet.h
Examples/Factorial/: CMakeLists.txt  main.cpp
Examples/PhoneMenu/: .clang-format  CMakeLists.txt  main.cpp
Examples/PhoneMenu/Controller/: Controller.cpp  Controller.h  IControllerPetriNet.h  IMenuStateMachine.h  MenuStateMachine.cpp  MenuStateMachine.h  XMLMenuStateMachine.cpp  XMLMenuStateMachine.h
Examples/PhoneMenu/Doc/: Remarks.md
Examples/PhoneMenu/Model/: Call.h  List.h  Message.h
Examples/PhoneMenu/View/: CallLogView.cpp  CallLogView.h  MainMenuView.cpp  MainMenuView.h  (+2 more)
Examples/PhoneMenuXML/: CMakeLists.txt  main.cpp
Examples/PhoneMenuXML/Controller/: Controller.cpp  Controller.h  MenuStateMachine.cpp  MenuStateMachine.h
Examples/PhoneMenuXML/Model/: Call.h  List.h  Message.h
Examples/PhoneMenuXML/View/: CallLogView.cpp  CallLogView.h  MainMenuView.cpp  MainMenuView.h  MessagesMenuView.cpp  MessagesMenuView.h
Examples/PhoneMenuXML/assets/: PhoneMenu.xml
ImportExport/: CMakeLists.txt  ExportFactory.cpp  ImportFactory.cpp
ImportExport/XML/src/: main.cpp
ImportExport/XML/src/XML/: XML_Exporter.cpp  XML_Exporter.h  XML_Importer.cpp  XML_Importer.h
ImportExport/include/ImportExport/: ExportFactory.h
PTN_Engine/: .gitignore  CMakeLists.txt  EventLoop.cpp  EventLoop.h  IPTN_EngineEL.h  IPTN_EnginePlace.h  ManagedContainer.h  ManagerBase.h  PTN_Engine.cpp  PTN_EngineImp.cpp  PTN_EngineImp.h  PTN_EngineImpProxy.cpp  PTN_EngineImpProxy.h  Place.cpp  Place.h  PlacesManagedContainer.cpp  PlacesManagedContainer.h  PlacesManager.cpp  PlacesManager.h  Transition.cpp  Transition.h  TransitionsManagedContainer.cpp  TransitionsManagedContainer.h  TransitionsManager.cpp  TransitionsManager.h
PTN_Engine/Executor/: ActionsExecutorFactory.cpp  ActionsExecutorFactory.h  DetachedExecutor.cpp  DetachedExecutor.h  IActionsExecutor.h  JobQueueExecutor.cpp  JobQueueExecutor.h  SingleThreadExecutor.cpp  SingleThreadExecutor.h
PTN_Engine/ImportExport/: ActionsThreadOptionConversions.cpp  ActionsThreadOptionConversions.h  CMakeLists.txt  ExportFactory.cpp  ExporterFactory.cpp  IExporter.cpp  IFileExporter.cpp  IFileImporter.cpp  IImporter.cpp  ImportFactory.cpp  ImporterFactory.cpp
PTN_Engine/ImportExport/XML/assets/: PetriNet.xml
PTN_Engine/ImportExport/XML/src/XML/: XML_Exporter.cpp  XML_Exporter.h  XML_FileExporter.cpp  XML_FileExporter.h  XML_FileImporter.cpp  XML_FileImporter.h  XML_Importer.cpp  XML_Importer.h
PTN_Engine/ImportExport/include/PTN_Engine/ImportExport/: ExporterFactory.h  FileExporterFactory.h  FileImporterFactory.h  IFileExporter.h  IFileImporter.h  ImportFactory.h  ImporterFactory.h
PTN_Engine/JobQueue/: JobQueue.cpp  JobQueue.h
PTN_Engine/PTN_Engine/: PTN_Engine.cpp  PTN_EngineImp.cpp  PTN_EngineImp.h  Place.cpp  Place.h  Transition.cpp  Transition.h
PTN_Engine/PTN_Engine/Utilities/: DetectRepeated.h
PTN_Engine/Utilities/: DetectRepeated.h
PTN_Engine/cmake/: PTN_Engine.pc.in  pugixml.CMakeLists.txt.in
PTN_Engine/include/PTN_Engine/: Action.h  ActivationCondition.h  Explicit.h  IActionFunctor.h  IConditionFunctor.h  IExporter.h  IImporter.h  PTN_Engine.h  PTN_Exception.h
PTN_Engine/include/PTN_Engine/Utilities/: Explicit.h  LockWeakPtr.h
Samples/: CMakeLists.txt
Samples/PhoneMenu/: CMakeLists.txt  main.cpp
Tests/: .clang-format
Tests/BlackBoxTests/: CMakeLists.txt  main.cpp
Tests/BlackBoxTests/Fixtures/: FixturePetriNet.cpp  FixturePetriNet.h
Tests/BlackBoxTests/Fixtures/F2/: F2.cpp  F2.h  f2.cpp  f2.h
Tests/BlackBoxTests/Mocks/: Dispatcher.cpp  Dispatcher.h  FreeChoicePetriNet.cpp  FreeChoicePetriNet.h  InhibitedPetriNet.cpp  InhibitedPetriNet.h  RoundRobinPetriNet.cpp  RoundRobinPetriNet.h  WeightedPetriNet.cpp  WeightedPetriNet.h
Tests/BlackBoxTests/Mocks/Dispatcher/: Dispatcher.cpp  Dispatcher.h  FreeChoicePetriNet.cpp  FreeChoicePetriNet.h  IDispatcherPetriNet.h  InhibitedPetriNet.cpp  InhibitedPetriNet.h  RoundRobinPetriNet.cpp  RoundRobinPetriNet.h  WeightedPetriNet.cpp  WeightedPetriNet.h
Tests/BlackBoxTests/Mocks/RegisteredFunctions/: Controller.cpp  Controller.h  RegisteredFunctionsPN.cpp  RegisteredFunctionsPN.h
Tests/BlackBoxTests/Mocks/Simple/: SimpleController.cpp  SimpleController.h  SimplePetriNet.cpp  SimplePetriNet.h
Tests/BlackBoxTests/Tests/: TestPetriNet.cpp
Tests/WhiteBoxTests/: CMakeLists.txt  main.cpp
Tests/WhiteBoxTests/Fixtures/: FixtureTestPlace.cpp  FixtureTestPlace.h  FixtureTestTransition.cpp  FixtureTestTransition.h
Tests/WhiteBoxTests/Mocks/: Controller.cpp  Controller.h
Tests/WhiteBoxTests/Tests/: TestEventLoop.cpp  TestJobQueue.cpp  TestManagedContainer.cpp  TestPTN_Engine.cpp  TestPTN_EngineImp.cpp  TestPlace.cpp  TestPlacesManager.cpp  TestTransition.cpp  TestTransitionsManager.cpp
Tests/WhiteBoxTests/Tests/ImportExport/: TestFileExporterFactory.cpp  TestFileImporterFactory.cpp  TestXML_FileExporter.cpp  TestXML_FileImporter.cpp
WhiteBoxTests/: CMakeLists.txt
WhiteBoxTests/Fixtures/: FixtureTestPlace.cpp  FixtureTestPlace.h  FixtureTestTransition.cpp  FixtureTestTransition.h
WhiteBoxTests/Mocks/: Controller.cpp
WhiteBoxTests/Tests/: TestPlace.cpp  TestTransition.cpp
cmake/: CMakeLists.txt.in  gtest.CMakeLists.txt.in
(+10 files in other folders)
